HelloUltraviolet/Fixtures/RejectedSource/FFI/ErrorPredicateWellFormedness/Expected.uv
//! Expected diagnostic metadata for the ErrorPredicateWellFormedness rejected-source specimen.

expectedDiagnostic("E-SEM-2855", "requirement.23.ErrorPredicateWellFormedness")
